--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
